// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accuracy renders OK 1`] = `
<tr
  value={99.12345}
/>
`;

exports[`Badges renders OK 1`] = `
<div
  user={
    Object {
      "level": 9,
    }
  }
/>
`;

exports[`Level renders OK 1`] = `
<div
  value={99.12345}
/>
`;

exports[`Score renders OK 1`] = `
<tr
  value={999999}
/>
`;

exports[`Statistic renders OK 1`] = `
<tr
  value={999999}
/>
`;
